@@ -1,6 +1,11 @@
 package io.micronaut.gradle.docker;
 
 import com.bmuschko.gradle.docker.tasks.image.Dockerfile;
+import io.micronaut.gradle.DefaultVersions;
+import io.micronaut.gradle.PluginsHelper;
+import io.micronaut.gradle.docker.model.Layer;
+import io.micronaut.gradle.docker.tasks.DockerResourceConfigDirectoryNamer;
+import io.micronaut.gradle.graalvm.NativeLambdaExtension;
 import org.graalvm.buildtools.gradle.NativeImagePlugin;
 import org.graalvm.buildtools.gradle.dsl.NativeImageOptions;
 import org.graalvm.buildtools.gradle.dsl.NativeResourcesOptions;
@@ -13,9 +18,8 @@ import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
 import org.gradle.api.file.ConfigurableFileCollection;
-import org.gradle.api.file.Directory;
+import org.gradle.api.file.DirectoryProperty;
 import org.gradle.api.file.ProjectLayout;
-import org.gradle.api.internal.file.FileOperations;
 import org.gradle.api.model.ObjectFactory;
 import org.gradle.api.plugins.BasePlugin;
 import org.gradle.api.plugins.JavaApplication;
@@ -35,14 +39,15 @@ import org.gradle.jvm.toolchain.JavaLauncher;
 import org.gradle.jvm.toolchain.JavaToolchainService;
 
 import javax.inject.Inject;
+import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import static io.micronaut.gradle.PluginsHelper.findMicronautExtension;
 import static io.micronaut.gradle.docker.MicronautDockerfile.DEFAULT_WORKING_DIR;
+import static io.micronaut.gradle.docker.MicronautDockerfile.applyStandardTransforms;
 
 /**
  * Specialization of {@link Dockerfile} for building native images.
@@ -52,25 +57,26 @@ import static io.micronaut.gradle.docker.MicronautDockerfile.DEFAULT_WORKING_DIR
  */
 public abstract class NativeImageDockerfile extends Dockerfile implements DockerBuildOptions {
 
-    private static final List<Integer> SUPPORTED_JAVA_VERSIONS = Collections.unmodifiableList(
+    public static final String AMAZON_LINUX_BASE_IMAGE = "public.ecr.aws/amazonlinux/amazonlinux:" + DefaultVersions.AMAZONLINUX;
+
+    private static final List<Integer> SUPPORTED_JAVA_VERSIONS = List.of(
             // keep those in descending order
-            Arrays.asList(17)
+            21,
+            17
     );
     private static final String ARM_ARCH = "aarch64";
-    private static final String X86_64_ARCH = "amd64";
-    private static final String GRAAL_VERSION_CONVENTION = "22.2.0";
+    private static final String X86_64_ARCH = "x64";
+
+    private static final String GRAALVM_DOWNLOAD_BASE_URL = "https://download.oracle.com/graalvm";
+    private static final String GRAALVM_DISTRIBUTION_PATH = "/%s/%s/graalvm-jdk-%s_linux-%s_bin.tar.gz";
+    //Latest version of GraalVM for JDK 17 available under the GraalVM Free Terms and Conditions (GFTC) licence
+    private static final String GRAALVM_FOR_JDK17 = "17.0.12";
 
     /**
      * @return The JDK version to use with native image. Defaults to the toolchain version, or the current Java version.
      */
     @Input
     public abstract Property<String> getJdkVersion();
-
-    /**
-     * @return The Graal version to use.
-     */
-    @Input
-    public abstract Property<String> getGraalVersion();
 
     /**
      * @return The Graal architecture
@@ -89,15 +95,18 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
      */
     @Input
     @Optional
+    @Override
     public abstract Property<String> getBaseImage();
 
     /**
      * @return The arguments to pass to the native image executable when starting up in the docker container.
      */
     @Input
+    @Override
     public abstract ListProperty<String> getArgs();
 
     @Input
+    @Override
     public abstract ListProperty<Integer> getExposedPorts();
 
     /**
@@ -120,6 +129,7 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
 
     @Input
     @Optional
+    @Override
     public abstract Property<String> getDefaultCommand();
 
     /**
@@ -128,6 +138,17 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
     @Input
     @Optional
     public abstract Property<String> getGraalReleasesUrl();
+
+    /**
+     * Return the full URL of the GraalVM distribution to use. By default, it
+     * uses the base URL from {@link #getGraalReleasesUrl()} and searches in a
+     * location known to exist when the plugin was built.
+     *
+     * @return the URL of the GraalVM distribution to use
+     */
+    @Input
+    @Optional
+    public abstract Property<String> getGraalVMDistributionUrl();
 
     @Input
     @Override
@@ -142,12 +163,31 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
     @Inject
     protected abstract ProjectLayout getLayout();
 
-    @Inject
-    protected abstract FileOperations getFileOperations();
+    @Input
+    @Optional
+    public Provider<List<String>> getTweaks() {
+        return getDockerfileTweaks().map(tweaks -> DockerfileEditor.fingerprintOf(getObjects(), tweaks));
+    }
+
+    /**
+     * The layers to copy to the image.
+     * @return the layers
+     */
+    @Input
+    public abstract ListProperty<Layer> getLayers();
+
+    /**
+     * If true, the COPY command will use --link option when copying files from the build context.
+     * Defaults to false.
+     * @return The use copy link property
+     */
+    @Input
+    @Optional
+    public abstract Property<Boolean> getUseCopyLink();
 
     public NativeImageDockerfile() {
         Project project = getProject();
-        JavaPluginExtension javaExtension = (JavaPluginExtension) project.getExtensions().getByName("java");
+        JavaPluginExtension javaExtension = PluginsHelper.javaPluginExtensionOf(project);
         setGroup(BasePlugin.BUILD_GROUP);
         setDescription("Builds a Docker File for Native Image");
         getDestFile().set(project.getLayout().getBuildDirectory().file("docker/DockerfileNative"));
@@ -159,14 +199,24 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
                         .map(JavaLanguageVersion::asInt)
                         .orElse(project.getProviders().provider(() -> Integer.valueOf(Jvm.current().getJavaVersion().getMajorVersion())))
                         .map(NativeImageDockerfile::toSupportedJavaVersion)
-                        .map(v -> "java" + v)
+                        .map(String::valueOf)
         );
-        getGraalVersion().convention(GRAAL_VERSION_CONVENTION);
         String osArch = System.getProperty("os.arch");
         getGraalArch().convention(ARM_ARCH.equals(osArch) ? ARM_ARCH : X86_64_ARCH);
         getTargetWorkingDirectory().convention(DEFAULT_WORKING_DIR);
         getExposedPorts().convention(Collections.singletonList(8080));
-        getGraalImage().convention(getGraalVersion().zip(getJdkVersion(), NativeImageDockerfile::toGraalVMBaseImageName));
+        getGraalImage().convention(getJdkVersion().map(NativeImageDockerfile::toGraalVMBaseImageName));
+        getGraalReleasesUrl().convention(GRAALVM_DOWNLOAD_BASE_URL);
+        var distributionPath = getJdkVersion().zip(getGraalArch(), (jdk, arch) -> {
+            if ("17".equals(jdk)) {
+                getLogger().warn("You are using the latest release of GraalVM available under the GraalVM Free Terms and Conditions (GFTC) licence (" + GRAALVM_FOR_JDK17 + "). Consider upgrading to Java 21.");
+                return GRAALVM_DISTRIBUTION_PATH.formatted(jdk, "archive", GRAALVM_FOR_JDK17, arch);
+            }
+            return GRAALVM_DISTRIBUTION_PATH.formatted(jdk, "latest", jdk, arch);
+        });
+        getGraalVMDistributionUrl().convention(
+            getGraalReleasesUrl().zip(distributionPath, (base, path) -> base + path)
+        );
         getNativeImageOptions().convention(project
                 .getTasks()
                 .named(NativeImagePlugin.NATIVE_COMPILE_TASK_NAME, BuildNativeImageTask.class)
@@ -267,7 +317,7 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
                         @Optional
                         public Property<JavaLauncher> getJavaLauncher() {
                             // The native image docker file generator does NOT require
-                            // GraalVM nor will it use the java launcher so we make
+                            // GraalVM nor will it use the java launcher, so we make
                             // the property optional
                             return getObjects().property(JavaLauncher.class);
                         }
@@ -355,22 +405,32 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
                         public Property<String> getRequiredVersion() {
                             return delegate.getRequiredVersion();
                         }
+
+                        @Override
+                        public Property<Boolean> getPgoInstrument() {
+                            return delegate.getPgoInstrument();
+                        }
+
+                        @Override
+                        public DirectoryProperty getPgoProfilesDirectory() {
+                            return delegate.getPgoProfilesDirectory();
+                        }
                     };
                 })
         );
 
         //noinspection Convert2Lambda
-        doLast(new Action<Task>() {
+        doLast(new Action<>() {
             @Override
             public void execute(Task task) {
-                java.io.File f = NativeImageDockerfile.this.getDestFile().get().getAsFile();
-                System.out.println("Dockerfile written to: " + f.getAbsolutePath());
+                java.io.File f = getDestFile().get().getAsFile();
+                getLogger().lifecycle("Dockerfile written to: {}", f.getAbsolutePath());
             }
         });
     }
 
-    private static String toGraalVMBaseImageName(String graalVersion, String jdkVersion) {
-        return "ghcr.io/graalvm/native-image:ol7-" + jdkVersion + '-' + graalVersion;
+    private static String toGraalVMBaseImageName(String jdkVersion) {
+        return "ghcr.io/graalvm/native-image-community:" + jdkVersion + "-ol" + DefaultVersions.ORACLELINUX;
     }
 
     private static int toSupportedJavaVersion(int version) {
@@ -384,50 +444,71 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
 
     @TaskAction
     @Override
-    public void create() {
+    public void create() throws IOException {
         super.create();
-    }
-
-    private Provider<Directory> getConfigurationFilesDirectory() {
-        return getLayout().getBuildDirectory().dir("docker/config-dirs");
+        applyStandardTransforms(getUseCopyLink(), getObjects(), this);
+        if (getDockerfileTweaks().isPresent()) {
+            DockerfileEditor.apply(getObjects(), this, getDockerfileTweaks().get());
+        }
     }
 
     // Everything done in this method MUST be lazy, so use providers as much as possible
     private void setupInstructions(List<Instruction> additionalInstructions) {
         DockerBuildStrategy buildStrategy = getBuildStrategy().get();
-        BaseImageForBuildStrategyResolver imageResolver = new BaseImageForBuildStrategyResolver(buildStrategy);
+        var imageResolver = new BaseImageForBuildStrategyResolver(buildStrategy);
         Provider<From> baseImageProvider = getProviders().provider(() -> new From(imageResolver.get()));
         if (buildStrategy == DockerBuildStrategy.LAMBDA) {
             from(new From(imageResolver.resolve()).withStage("graalvm"));
             environmentVariable("LANG", "en_US.UTF-8");
-            runCommand("yum install -y gcc gcc-c++ libc6-dev zlib1g-dev curl bash zlib zlib-devel zlib-static zip tar gzip");
+            runCommand("dnf update -y && dnf install -y gcc glibc-devel zlib-devel libstdc++-static tar && dnf clean all && rm -rf /var/cache/dnf");
             String jdkVersion = getJdkVersion().get();
-            String graalVersion = getGraalVersion().get();
             String graalArch = getGraalArch().get();
-            String fileName = "graalvm-ce-" + jdkVersion + "-linux-" + graalArch + "-" + graalVersion + ".tar.gz";
-            String releasesUrl = getGraalReleasesUrl().getOrElse("https://github.com/graalvm/graalvm-ce-builds/releases/download");
-            runCommand("curl -4 -L " + releasesUrl + "/vm-" + graalVersion + "/" + fileName + " -o /tmp/" + fileName);
-            runCommand("tar -zxf /tmp/" + fileName + " -C /tmp && mv /tmp/graalvm-ce-" + jdkVersion + "-" + graalVersion + " /usr/lib/graalvm");
+            // https://download.oracle.com/graalvm/17/latest/graalvm-jdk-17_linux-aarch64_bin.tar.gz
+            String fileName = "graalvm-jdk-" + jdkVersion + "_linux-" + graalArch + "_bin.tar.gz";
+            String graalvmDistributionUrl = getGraalVMDistributionUrl().get();
+            runCommand("curl -4 -L " + graalvmDistributionUrl + " -o /tmp/" + fileName);
+            runCommand("tar -zxf /tmp/" + fileName + " -C /tmp && ls -d /tmp/graalvm-jdk-"+ jdkVersion + "* | grep -v \"tar.gz\" | xargs -I_ mv _ /usr/lib/graalvm");
             runCommand("rm -rf /tmp/*");
-            runCommand("/usr/lib/graalvm/bin/gu install native-image");
+            if (toMajorVersion(jdkVersion) < 21) {
+                // The GraalVM Updater was removed in GraalVM for JDK 21
+                // https://github.com/oracle/graal/issues/6855
+                runCommand("/usr/lib/graalvm/bin/gu install native-image");
+            }
             defaultCommand("/usr/lib/graalvm/bin/native-image");
             environmentVariable("PATH", "/usr/lib/graalvm/bin:${PATH}");
             from(new From("graalvm").withStage("builder"));
+            runCommand("dnf update -y && dnf install -y zip && dnf clean all");
         } else {
             from(new From(getGraalImage().get()).withStage("graalvm"));
         }
 
-        MicronautDockerfile.setupResources(this);
+        MicronautDockerfile.setupResources(this, getLayers().get(), null);
         Property<String> executable = getObjects().property(String.class);
         executable.set("application");
         String workDir = getTargetWorkingDirectory().get();
         runCommand("mkdir " + workDir + "/config-dirs");
-        getInstructions().addAll(getNativeImageOptions().map(options ->
-                options.getConfigurationFileDirectories()
-                        .getFiles()
-                        .stream()
-                        .map(this::toCopyResourceDirectoryInstruction)
-                        .toList()
+        getInstructions().addAll(getNativeImageOptions().map(options -> {
+                    var namer = new DockerResourceConfigDirectoryNamer();
+                    return options.getConfigurationFileDirectories()
+                            .getFiles()
+                            .stream()
+                            .filter(java.io.File::exists)
+                            .map(dir -> {
+                                String dirName = namer.determineNameFor(dir);
+                                return new RunCommandInstruction("mkdir -p " + workDir + "/config-dirs/" + dirName);
+                            })
+                            .toList();
+                }
+        ));
+        getInstructions().addAll(getNativeImageOptions().map(options -> {
+                    var namer = new DockerResourceConfigDirectoryNamer();
+                    return options.getConfigurationFileDirectories()
+                            .getFiles()
+                            .stream()
+                            .filter(java.io.File::exists)
+                            .map(dir -> toCopyResourceDirectoryInstruction(dir, namer))
+                            .toList();
+                }
         ));
         runCommand(getProviders().provider(() -> String.join(" ", buildActualCommandLine(executable, buildStrategy, imageResolver))));
         switch (buildStrategy) {
@@ -438,7 +519,7 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
                 copyFile(new CopyFile(workDir + "/application", "/function/func").withStage("graalvm"));
                 copyFile(new CopyFile("/function/runtime/lib/*", ".").withStage("fnfdk"));
                 entryPoint(getArgs().map(strings -> {
-                    List<String> newList = new ArrayList<>(strings.size() + 1);
+                    var newList = new ArrayList<String>(strings.size() + 1);
                     newList.add("./func");
                     newList.addAll(strings);
                     newList.add("-Djava.library.path=/function");
@@ -453,10 +534,10 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
             case LAMBDA:
                 from(baseImageProvider);
                 workingDir("/function");
-                runCommand("yum install -y zip");
+                runCommand("dnf install -y zip");
                 copyFile(new CopyFile(workDir + "/application", "/function/func").withStage("builder"));
                 String funcCmd = String.join(" ", getArgs().map(strings -> {
-                    List<String> newList = new ArrayList<>(strings.size() + 1);
+                    var newList = new ArrayList<String>(strings.size() + 1);
                     newList.add("./func");
                     newList.addAll(strings);
                     newList.add("-Djava.library.path=$(pwd)");
@@ -471,18 +552,11 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
                 break;
             default:
                 from(baseImageProvider);
-                // mandatory dependency for alpine-glibc docker images
-                runCommand(getProviders().provider(() -> {
-                    if (baseImageProvider.get().getImage().contains("alpine-glibc")) {
-                        return "apk --no-cache update && apk add libstdc++";
-                    }
-                    return "";
-                }));
                 exposePort(getExposedPorts());
                 getInstructions().addAll(additionalInstructions);
                 copyFile(new CopyFile(workDir + "/application", "/app/application").withStage("graalvm"));
                 entryPoint(getArgs().map(strings -> {
-                    List<String> newList = new ArrayList<>(strings.size() + 1);
+                    var newList = new ArrayList<String>(strings.size() + 1);
                     newList.add("/app/application");
                     newList.addAll(strings);
                     return newList;
@@ -491,8 +565,12 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
         }
     }
 
-    private CopyFileInstruction toCopyResourceDirectoryInstruction(java.io.File resourceDirectory) {
-        return new CopyFileInstruction(new CopyFile("config-dirs/" + resourceDirectory.getName(), getTargetWorkingDirectory().get() + "/config-dirs/" + resourceDirectory.getName()));
+    private CopyFileInstruction toCopyResourceDirectoryInstruction(java.io.File resourceDirectory, DockerResourceConfigDirectoryNamer namer) {
+        String relativePath = namer.determineNameFor(resourceDirectory).replace(java.io.File.separatorChar, '/');
+        return new CopyFileInstruction(new CopyFile(
+                "config-dirs/" + relativePath,
+                getTargetWorkingDirectory().get() + "/config-dirs/" + relativePath
+        ));
     }
 
     protected List<String> buildActualCommandLine(Provider<String> executable, DockerBuildStrategy buildStrategy, BaseImageForBuildStrategyResolver imageResolver) {
@@ -501,16 +579,19 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
         if (buildStrategy == DockerBuildStrategy.ORACLE_FUNCTION) {
             options.getMainClass().set("com.fnproject.fn.runtime.EntryPoint");
             options.getBuildArgs().add("--report-unsupported-elements-at-runtime");
+            options.getBuildArgs().add("-H:PageSize=64k");
         } else if (buildStrategy == DockerBuildStrategy.LAMBDA) {
+            var micronautExtension = findMicronautExtension(getProject());
+            var nativeLambdaExtension = micronautExtension.getExtensions().getByType(NativeLambdaExtension.class);
             JavaApplication javaApplication = getProject().getExtensions().getByType(JavaApplication.class);
             if (!javaApplication.getMainClass().isPresent()) {
-                options.getMainClass().set("io.micronaut.function.aws.runtime.MicronautLambdaRuntime");
+                options.getMainClass().set(nativeLambdaExtension.getLambdaRuntimeClassName());
             }
             if (!options.getMainClass().isPresent()) {
-                options.getMainClass().set("io.micronaut.function.aws.runtime.MicronautLambdaRuntime");
+                options.getMainClass().set(nativeLambdaExtension.getLambdaRuntimeClassName());
             }
         }
-        List<String> commandLine = new ArrayList<>();
+        var commandLine = new ArrayList<String>();
         commandLine.add("native-image");
         List<String> args = buildNativeImageCommandLineArgs(executable, options);
         commandLine.addAll(args);
@@ -536,7 +617,9 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
                 getObjects().property(String.class),
                 getObjects().property(String.class),
                 getObjects().fileProperty(),
-                getProviders().provider(() -> false) // in a docker container we don't use the @arg file
+                getProviders().provider(() -> false), // in a docker container we don't use the @arg file
+                getObjects().property(Integer.class).value(getJdkVersion().map(NativeImageDockerfile::toMajorVersion)),
+                getProviders().provider(() -> false) // in a docker container we don't use color output
         ).asArguments();
         if (System.getProperty("os.name").toLowerCase().contains("windows")) {
             // This is a dirty workaround for https://github.com/micronaut-projects/micronaut-gradle-plugin/issues/358
@@ -555,6 +638,13 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
         return args;
     }
 
+    private static Integer toMajorVersion(String version) {
+        if (version.contains(".")) {
+            return Integer.parseInt(version.substring(0, version.indexOf('.')));
+        }
+        return Integer.parseInt(version);
+    }
+
     /**
      * Builds a new concrete list of native image options from the configuration
      * options. We don't use the actual options because we don't want to mutate
@@ -568,18 +658,48 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
         options.getVerbose().set(originalOptions.flatMap(NativeImageOptions::getVerbose));
         options.getFallback().set(originalOptions.flatMap(NativeImageOptions::getFallback));
         options.getSystemProperties().set(originalOptions.flatMap(NativeImageOptions::getSystemProperties));
-        options.getRichOutput().set(false); // no need in docker images
+        options.getExcludeConfigArgs().set(originalOptions.flatMap(NativeImageOptions::getExcludeConfigArgs).map(this::remapExcludeConfigArgs));
+        options.getRichOutput().set(false);
+        var namer = new DockerResourceConfigDirectoryNamer();
         Provider<List<String>> remappedConfigDirectories = originalOptions.map(orig -> orig.getConfigurationFileDirectories()
                 .getFiles()
                 .stream()
-                .map(f -> getTargetWorkingDirectory().get() + "/config-dirs/" + f.getName())
+                .map(f -> getTargetWorkingDirectory().get() + "/config-dirs/" + namer.determineNameFor(f))
                 .toList()
         );
         options.getConfigurationFileDirectories().setFrom(
                 remappedConfigDirectories
         );
-        options.getClasspath().from(getTargetWorkingDirectory().map(d -> d + "/libs/*.jar"), getTargetWorkingDirectory().map(d -> d + "/resources:" + d + "/application.jar"));
+        options.getClasspath().from(
+                getTargetWorkingDirectory().map(d -> d + "/libs/*.jar"),
+                getTargetWorkingDirectory().map(d -> d + "/resources"),
+                getTargetWorkingDirectory().map(d -> d + "/application.jar")
+        );
         options.getImageName().set("application");
+    }
+
+    /**
+     * Exclude config args that we get reference files from the original file system,
+     * but we are building within docker, and the libraries are now in a different
+     * directory, so we're monkey patching the config args to point to the new location.
+     *
+     * @param args the original args, containing references to the original file system
+     * @return the patched args, with references to the docker context
+     */
+    private List<String> remapExcludeConfigArgs(List<String> args) {
+        return args.stream().map(arg -> {
+            if (arg.startsWith("\\Q") && arg.contains(".jar")) {
+                // The string ends with \Q or \E. Skip it in the search.
+                int index = arg.lastIndexOf(java.io.File.separatorChar, arg.length() - 3);
+                if (index > 0) {
+                    // Why aren't we using `\Q` and `\E` here?
+                    // Because for some reason, it doesn't when we build under
+                    // docker.
+                    return ".*/libs/" + arg.substring(index + 1, arg.length() - 2);
+                }
+            }
+            return arg;
+        }).toList();
     }
 
     private NativeImageOptions newNativeImageOptions(String name) {
@@ -595,7 +715,7 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
      * This is executed post project evaluation
      */
     void setupNativeImageTaskPostEvaluate() {
-        List<Instruction> additionalInstructions = new ArrayList<>(getInstructions().get());
+        var additionalInstructions = new ArrayList<>(getInstructions().get());
         // Reset the instructions to empty
         getInstructions().set(new ArrayList<>());
         setupInstructions(additionalInstructions);
@@ -623,7 +743,7 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
 
     @Override
     public DockerBuildOptions exportPorts(Integer... ports) {
-        this.getExposedPorts().set(Arrays.asList(ports));
+        this.getExposedPorts().set(List.of(ports));
         return this;
     }
 
@@ -635,7 +755,7 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
         return "latest";
     }
 
-    private class BaseImageForBuildStrategyResolver {
+    protected class BaseImageForBuildStrategyResolver {
         private final DockerBuildStrategy strategy;
         private String resolved;
 
@@ -654,9 +774,9 @@ public abstract class NativeImageDockerfile extends Dockerfile implements Docker
             String baseImage = getBaseImage().getOrNull();
 
             if (strategy == DockerBuildStrategy.LAMBDA && baseImage == null) {
-                baseImage = "amazonlinux:latest";
+                baseImage = AMAZON_LINUX_BASE_IMAGE;
             } else if (baseImage == null) {
-                baseImage = "frolvlad/alpine-glibc:alpine-3.12";
+                baseImage = "cgr.dev/chainguard/wolfi-base:latest";
             }
 
             return baseImage;
