@@ -18,16 +18,12 @@ package io.micronaut.gradle;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
-import org.gradle.api.artifacts.Dependency;
 import org.gradle.api.artifacts.dsl.DependencyHandler;
 import org.gradle.api.plugins.BasePlugin;
 import org.gradle.api.plugins.JavaPlugin;
-import org.gradle.api.plugins.JavaPluginConvention;
 import org.gradle.api.plugins.JavaPluginExtension;
 import org.gradle.api.plugins.PluginManager;
-import org.gradle.api.provider.ListProperty;
 import org.gradle.api.tasks.SourceSet;
-import org.gradle.api.tasks.SourceSetContainer;
 import org.gradle.api.tasks.TaskContainer;
 import org.gradle.api.tasks.TaskProvider;
 import org.gradle.api.tasks.compile.GroovyCompile;
@@ -35,7 +31,6 @@ import org.gradle.api.tasks.compile.JavaCompile;
 import org.gradle.api.tasks.testing.Test;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -51,24 +46,23 @@ import static org.gradle.api.plugins.JavaPlugin.COMPILE_ONLY_CONFIGURATION_NAME;
 import static org.gradle.api.plugins.JavaPlugin.IMPLEMENTATION_CONFIGURATION_NAME;
 import static org.gradle.api.plugins.JavaPlugin.TEST_ANNOTATION_PROCESSOR_CONFIGURATION_NAME;
 import static org.gradle.api.plugins.JavaPlugin.TEST_COMPILE_ONLY_CONFIGURATION_NAME;
-import static org.gradle.api.plugins.JavaPlugin.TEST_IMPLEMENTATION_CONFIGURATION_NAME;
 
 /**
  * A base plugin which configures Micronaut components, which are either a Micronaut
  * library, or a Micronaut application.
  */
 public class MicronautComponentPlugin implements Plugin<Project> {
-    private final static List<String> SOURCESETS = Arrays.asList(
+    private static final List<String> SOURCESETS = List.of(
             SourceSet.MAIN_SOURCE_SET_NAME,
             SourceSet.TEST_SOURCE_SET_NAME
     );
-    private final static Set<String> CONFIGURATIONS_TO_APPLY_BOMS = Collections.unmodifiableSet(new HashSet<String>() {{
-        add(ANNOTATION_PROCESSOR_CONFIGURATION_NAME);
-        add(TEST_ANNOTATION_PROCESSOR_CONFIGURATION_NAME);
-        add(API_CONFIGURATION_NAME);
-        add(IMPLEMENTATION_CONFIGURATION_NAME);
-        add(COMPILE_ONLY_CONFIGURATION_NAME);
-    }});
+    private static final Set<String> CONFIGURATIONS_TO_APPLY_BOMS = Set.of(
+        ANNOTATION_PROCESSOR_CONFIGURATION_NAME,
+        TEST_ANNOTATION_PROCESSOR_CONFIGURATION_NAME,
+        API_CONFIGURATION_NAME,
+        IMPLEMENTATION_CONFIGURATION_NAME,
+        COMPILE_ONLY_CONFIGURATION_NAME
+    );
     public static final String MICRONAUT_BOMS_CONFIGURATION = "micronautBoms";
     public static final String INSPECT_RUNTIME_CLASSPATH_TASK_NAME = "inspectRuntimeClasspath";
 
@@ -94,11 +88,16 @@ public class MicronautComponentPlugin implements Plugin<Project> {
             configureTesting(project, micronautExtension, inspectRuntimeClasspath);
             ShadowPluginSupport.mergeServiceFiles(project);
         });
-
+        PluginsHelper.registerVersionExtensions(PluginsHelper.KNOWN_VERSION_PROPERTIES, project);
     }
 
     private void configureTesting(Project project, MicronautExtension micronautExtension, TaskProvider<ApplicationClasspathInspector> inspectRuntimeClasspath) {
-        project.getTasks().withType(Test.class).configureEach(t -> t.dependsOn(inspectRuntimeClasspath));
+        project.getTasks().withType(Test.class).configureEach(t -> {
+            t.dependsOn(inspectRuntimeClasspath);
+            if (micronautExtension.getTestRuntime().get().isUsingJunitPlatform()) {
+                t.useJUnitPlatform();
+            }
+        });
         project.afterEvaluate(p -> {
             DependencyHandler dependencyHandler = project.getDependencies();
             MicronautTestRuntime testRuntime = micronautExtension.getTestRuntime().get();
@@ -109,104 +108,72 @@ public class MicronautComponentPlugin implements Plugin<Project> {
                 }
             });
 
-            if (testRuntime != MicronautTestRuntime.NONE) {
-                // set JUnit 5 platform
-                project.getTasks().withType(Test.class).configureEach(test -> {
-                    if (!test.getTestFramework().getClass().getName().contains("JUnitPlatform")) {
-                        test.useJUnitPlatform();
-                    }
-                });
-            }
-
             PluginsHelper.applyAdditionalProcessors(
                     p,
                     ANNOTATION_PROCESSOR_CONFIGURATION_NAME,
                     TEST_ANNOTATION_PROCESSOR_CONFIGURATION_NAME
             );
-
-            Configuration testConfig = p.getConfigurations().getByName(TEST_IMPLEMENTATION_CONFIGURATION_NAME);
-            boolean hasJunit5 = !testConfig.getAllDependencies()
-                    .matching(dependency -> {
-                        String name = dependency.getName();
-                        return name.equals("junit-jupiter-engine") || name.equals("micronaut-test-junit5");
-                    })
-                    .isEmpty();
-            if (hasJunit5) {
-                project.getTasks().withType(Test.class).configureEach(test -> {
-                    if (!test.getTestFramework().getClass().getName().contains("JUnitPlatform")) {
-                        test.useJUnitPlatform();
-                    }
-                });
-            }
         });
 
 
     }
 
     private void configureMicronautBom(Project project, MicronautExtension micronautExtension) {
-        Configuration micronautBoms = project.getConfigurations().create(MICRONAUT_BOMS_CONFIGURATION, conf -> {
-            conf.setCanBeResolved(false);
-            conf.setCanBeConsumed(false);
-            conf.setDescription("BOMs which will be applied by the Micronaut plugins");
+        Configuration micronautBoms = project.getConfigurations().getByName(MICRONAUT_BOMS_CONFIGURATION);
+        PluginsHelper.maybeAddMicronautPlaformBom(project, micronautBoms);
+        var registry = project.getExtensions().getByType(SourceSetConfigurerRegistry.class);
+        var knownSourceSets = new HashSet<SourceSet>();
+        registry.register(sourceSet -> {
+            configureSourceSet(project, sourceSet, micronautBoms);
+            knownSourceSets.add(sourceSet);
         });
-        DependencyHandler dependencyHandler = project.getDependencies();
         project.afterEvaluate(p -> {
-            dependencyHandler.addProvider(micronautBoms.getName(), project.getProviders().provider(() -> {
-                String micronautVersion = PluginsHelper.findMicronautVersion(project, micronautExtension);
-                return resolveMicronautPlatform(dependencyHandler, micronautVersion);
-            }));
             project.getConfigurations().configureEach(conf -> {
                 if (CONFIGURATIONS_TO_APPLY_BOMS.contains(conf.getName())) {
                     conf.extendsFrom(micronautBoms);
                 }
             });
-            ListProperty<SourceSet> additionalSourceSets =
+            var additionalSourceSets =
                     micronautExtension.getProcessing().getAdditionalSourceSets();
-
             if (additionalSourceSets.isPresent()) {
                 List<SourceSet> configurations = additionalSourceSets.get();
                 if (!configurations.isEmpty()) {
                     for (SourceSet sourceSet : configurations) {
-                        String annotationProcessorConfigurationName = sourceSet
-                                .getAnnotationProcessorConfigurationName();
-                        String implementationConfigurationName = sourceSet
-                                .getImplementationConfigurationName();
-                        List<String> both = Arrays.asList(
-                                implementationConfigurationName,
-                                annotationProcessorConfigurationName
-                        );
-                        for (String configuration : both) {
-                            Configuration conf = project.getConfigurations().findByName(configuration);
-                            if (conf != null) {
-                                conf.extendsFrom(micronautBoms);
-                            }
+                        if (!knownSourceSets.contains(sourceSet)) {
+                            AnnotationProcessing.showAdditionalSourceSetDeprecationWarning(sourceSet);
+                            configureSourceSet(project, sourceSet, micronautBoms);
                         }
-                        configureAnnotationProcessors(p,
-                                implementationConfigurationName,
-                                annotationProcessorConfigurationName);
                     }
                 }
             }
         });
     }
 
-
-    static Dependency resolveMicronautPlatform(DependencyHandler dependencyHandler, String micronautVersion) {
-        final Dependency platform;
-        if (micronautVersion.endsWith("-SNAPSHOT")) {
-            // enforced platform has to be used for snapshots to work correctly
-            platform = dependencyHandler.enforcedPlatform("io.micronaut:micronaut-bom:" + micronautVersion);
-        } else {
-            platform = dependencyHandler.platform("io.micronaut:micronaut-bom:" + micronautVersion);
+    private static void configureSourceSet(Project project, SourceSet sourceSet, Configuration micronautBoms) {
+        String annotationProcessorConfigurationName = sourceSet
+                .getAnnotationProcessorConfigurationName();
+        String implementationConfigurationName = sourceSet
+                .getImplementationConfigurationName();
+        List<String> both = List.of(
+                implementationConfigurationName,
+                annotationProcessorConfigurationName
+        );
+        for (String configuration : both) {
+            Configuration conf = project.getConfigurations().findByName(configuration);
+            if (conf != null) {
+                conf.extendsFrom(micronautBoms);
+            }
         }
-        return platform;
+        configureAnnotationProcessors(project,
+                implementationConfigurationName,
+                annotationProcessorConfigurationName);
     }
+
 
     private void configureJava(Project project, TaskContainer tasks) {
 
         project.afterEvaluate(p -> {
-            SourceSetContainer sourceSets = p.getConvention().getPlugin(JavaPluginConvention.class)
-                    .getSourceSets();
+            var sourceSets = PluginsHelper.findSourceSets(p);
             for (String sourceSetName : SOURCESETS) {
                 SourceSet sourceSet = sourceSets.findByName(sourceSetName);
                 if (sourceSet != null) {
@@ -246,13 +213,13 @@ public class MicronautComponentPlugin implements Plugin<Project> {
                     if (!annotations.isEmpty()) {
                         compilerArgs.add("-Amicronaut.processing.annotations=" + String.join(",", annotations));
                     } else {
-                        if (group.length() > 0) {
+                        if (!group.isEmpty()) {
                             compilerArgs.add("-Amicronaut.processing.annotations=" + group + ".*");
                         }
                     }
                 }
 
-                if (group.length() > 0) {
+                if (!group.isEmpty()) {
                     compilerArgs.add("-Amicronaut.processing.group=" + group);
                     compilerArgs.add("-Amicronaut.processing.module=" + module);
                 }
@@ -265,16 +232,16 @@ public class MicronautComponentPlugin implements Plugin<Project> {
     private void configureGroovy(Project project, TaskContainer tasks, MicronautExtension micronautExtension) {
         project.getPluginManager().withPlugin("groovy", plugin -> {
             tasks.withType(GroovyCompile.class).configureEach(groovyCompile -> groovyCompile.getGroovyOptions().setParameters(true));
-            JavaPluginConvention convention = project.getConvention().getPlugin(JavaPluginConvention.class);
+            var javaPluginExtension = PluginsHelper.javaPluginExtensionOf(project);
             configureDefaultGroovySourceSet(
                     project,
-                    convention,
+                    javaPluginExtension,
                     COMPILE_ONLY_CONFIGURATION_NAME,
                     "main"
             );
             configureDefaultGroovySourceSet(
                     project,
-                    convention,
+                    javaPluginExtension,
                     TEST_COMPILE_ONLY_CONFIGURATION_NAME,
                     "test"
             );
@@ -282,9 +249,7 @@ public class MicronautComponentPlugin implements Plugin<Project> {
                 DependencyHandler dependencyHandler = project.getDependencies();
 
                 for (String defaultSourceSetName : SOURCESETS) {
-                    SourceSet sourceSet = p.getConvention().getPlugin(JavaPluginConvention.class)
-                            .getSourceSets()
-                            .findByName(defaultSourceSetName);
+                    var sourceSet = PluginsHelper.findSourceSets(p).findByName(defaultSourceSetName);
                     if (sourceSet != null) {
                         String configName = sourceSet.getCompileOnlyConfigurationName();
                         Optional<File> groovySrcDir = findGroovySrcDir(sourceSet);
@@ -296,7 +261,8 @@ public class MicronautComponentPlugin implements Plugin<Project> {
                         }
                     }
                 }
-                ListProperty<SourceSet> additionalSourceSets = micronautExtension.getProcessing().getAdditionalSourceSets();
+                @SuppressWarnings("deprecation")
+                var additionalSourceSets = micronautExtension.getProcessing().getAdditionalSourceSets();
                 if (additionalSourceSets.isPresent()) {
                     List<SourceSet> sourceSets = additionalSourceSets.get();
                     for (SourceSet sourceSet : sourceSets) {
@@ -319,10 +285,10 @@ public class MicronautComponentPlugin implements Plugin<Project> {
 
 
     private void configureDefaultGroovySourceSet(Project p,
-                                                 JavaPluginConvention plugin,
+                                                 JavaPluginExtension javaPluginExtension,
                                                  String scope,
                                                  String sourceSetName) {
-        SourceSet groovySourceSet = plugin.getSourceSets().findByName(sourceSetName);
+        SourceSet groovySourceSet = javaPluginExtension.getSourceSets().findByName(sourceSetName);
         if (groovySourceSet != null) {
             Optional<File> groovySrc = findGroovySrcDir(groovySourceSet);
             groovySrc.ifPresent((f -> applyAdditionalProcessors(p, scope)));
@@ -331,11 +297,10 @@ public class MicronautComponentPlugin implements Plugin<Project> {
 
     private static TaskProvider<ApplicationClasspathInspector> registerInspectRuntimeClasspath(Project project, TaskContainer tasks) {
         return tasks.register(INSPECT_RUNTIME_CLASSPATH_TASK_NAME, ApplicationClasspathInspector.class, task -> {
-            JavaPluginExtension javaPluginExtension = project.getExtensions().getByType(JavaPluginExtension.class);
             task.setGroup(BasePlugin.BUILD_GROUP);
             task.setDescription("Performs sanity checks of the runtime classpath to warn about misconfigured builds");
             task.getRuntimeClasspath().from(project.getConfigurations().getByName(JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME));
-            task.getResources().from(javaPluginExtension.getSourceSets().getByName(SourceSet.MAIN_SOURCE_SET_NAME).getResources());
+            task.getResources().from(PluginsHelper.findSourceSets(project).getByName(SourceSet.MAIN_SOURCE_SET_NAME).getResources());
             task.getReportFile().set(project.getLayout().getBuildDirectory().file("reports/inspectRuntimeClasspath.txt"));
         });
     }
